Avoid unmutable list for OpenStack IA